src/component/view/projects.scss
.projects {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  width: 100%;
  .itemsContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 60px;
    width: 100%;
    overflow: hidden;
    padding: 0px 50px 0px 50px;

    #title {
      display: flex;
      font-size: 24px;
      gap: 28px;
      width: 100%;
      text-align: center;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      .line {
        width: 50%;
      }
    }
    .projectsCardsContainer {
      display: flex;
      overflow-x: auto;
      overflow-y: hidden;
      width: 100%;
      max-width: 100%;
      gap: 24px;
      padding-bottom: 20px;
      box-sizing: border-box;
      * {
        flex-shrink: 0;
      }
    }
  }
}
@media (max-width: 500px) {
  .projectsCardsContainer {
    padding-left: 10px;
    scroll-snap-type: x mandatory;
    * {
      scroll-snap-align: center;
    }
  }
}

